# NeuralNet

./: README.md  autoencoder.py  autoencoder_predict.py  custom_trained_autoenc.py  data_iterator.py  keras_autoencoder.py  layer.py  loss.py  mlp.py  optimizer.py  pyproject.toml  read_wine_data.py  reduced_dim.py  train.py  wine_classifier.py
tensortango/: data_iterator.py  layer.py  loss.py  mlp.py  optimizer.py  tensortango_autoencoder.py  train.py
